[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/GUI.gd" type="Script" id=1]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
margin_bottom = 36.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 1366.0
margin_bottom = 36.0
__meta__ = {
"_editor_description_": ""
}

[node name="Top" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1366.0
margin_bottom = 36.0

[node name="Top_Left" type="HBoxContainer" parent="MarginContainer/Top"]
margin_right = 346.0
margin_bottom = 36.0

[node name="Generation_Counter" type="VBoxContainer" parent="MarginContainer/Top/Top_Left"]
margin_right = 130.0
margin_bottom = 36.0

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/Top/Top_Left/Generation_Counter"]
margin_right = 130.0

[node name="Label" type="Label" parent="MarginContainer/Top/Top_Left/Generation_Counter"]
margin_top = 4.0
margin_right = 130.0
margin_bottom = 18.0
text = "Generation-Counter:"

[node name="Var" type="Label" parent="MarginContainer/Top/Top_Left/Generation_Counter"]
margin_top = 22.0
margin_right = 130.0
margin_bottom = 36.0
text = "1"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Top/Top_Left"]
margin_left = 134.0
margin_right = 154.0
margin_bottom = 36.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="Ants_Spawned" type="VBoxContainer" parent="MarginContainer/Top/Top_Left"]
margin_left = 158.0
margin_right = 251.0
margin_bottom = 36.0

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/Top/Top_Left/Ants_Spawned"]
margin_right = 93.0

[node name="Label" type="Label" parent="MarginContainer/Top/Top_Left/Ants_Spawned"]
margin_top = 4.0
margin_right = 93.0
margin_bottom = 18.0
text = "Ants spawned:"

[node name="Var" type="Label" parent="MarginContainer/Top/Top_Left/Ants_Spawned"]
margin_top = 22.0
margin_right = 93.0
margin_bottom = 36.0
text = "/"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/Top/Top_Left"]
margin_left = 255.0
margin_right = 275.0
margin_bottom = 36.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="Ants_Alive" type="VBoxContainer" parent="MarginContainer/Top/Top_Left"]
margin_left = 279.0
margin_right = 346.0
margin_bottom = 36.0

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/Top/Top_Left/Ants_Alive"]
margin_right = 67.0

[node name="Label" type="Label" parent="MarginContainer/Top/Top_Left/Ants_Alive"]
margin_top = 4.0
margin_right = 67.0
margin_bottom = 18.0
text = "Ants alive:"

[node name="Var" type="Label" parent="MarginContainer/Top/Top_Left/Ants_Alive"]
margin_top = 22.0
margin_right = 67.0
margin_bottom = 36.0
text = "/"
align = 1

[node name="EXPAND_Vertical" type="MarginContainer" parent="MarginContainer/Top"]
margin_left = 350.0
margin_right = 914.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="Top_Right" type="HBoxContainer" parent="MarginContainer/Top"]
margin_left = 918.0
margin_right = 1366.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_Tile_selection" type="OptionButton" parent="MarginContainer/Top/Top_Right"]
margin_right = 29.0
margin_bottom = 36.0

[node name="Btn_Level_selection" type="OptionButton" parent="MarginContainer/Top/Top_Right"]
margin_left = 33.0
margin_right = 139.0
margin_bottom = 36.0
text = "Select Level"

[node name="Btn_NextLevel" type="Button" parent="MarginContainer/Top/Top_Right"]
margin_left = 143.0
margin_right = 223.0
margin_bottom = 36.0
size_flags_vertical = 3
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_KillAllAnts" type="Button" parent="MarginContainer/Top/Top_Right"]
margin_left = 227.0
margin_right = 342.0
margin_bottom = 36.0
size_flags_vertical = 3
text = "New Generation"

[node name="Btn_PauseContinue" type="Button" parent="MarginContainer/Top/Top_Right"]
margin_left = 346.0
margin_right = 396.0
margin_bottom = 36.0
size_flags_vertical = 3
text = "Pause"

[node name="Btn_Menu" type="Button" parent="MarginContainer/Top/Top_Right"]
margin_left = 400.0
margin_right = 448.0
margin_bottom = 36.0
size_flags_vertical = 3
text = "Menu"

[connection signal="item_selected" from="MarginContainer/Top/Top_Right/Btn_Tile_selection" to="." method="_on_Btn_Tile_selection_item_selected"]
[connection signal="item_selected" from="MarginContainer/Top/Top_Right/Btn_Level_selection" to="." method="_on_Btn_Level_selection_item_selected"]
[connection signal="pressed" from="MarginContainer/Top/Top_Right/Btn_NextLevel" to="." method="_on_Btn_NextLevel_pressed"]
[connection signal="pressed" from="MarginContainer/Top/Top_Right/Btn_KillAllAnts" to="." method="_on_Btn_KillAllAnts_pressed"]
[connection signal="pressed" from="MarginContainer/Top/Top_Right/Btn_PauseContinue" to="." method="_on_Btn_PauseContinue_pressed"]
[connection signal="pressed" from="MarginContainer/Top/Top_Right/Btn_Menu" to="." method="_on_Btn_Menu_pressed"]
